basicDetail ui=>api doing

--- a/miniprogram/miniprogram/pages/detailBasic/detailBasic.wxml
+++ b/miniprogram/miniprogram/pages/detailBasic/detailBasic.wxml
@@ -52,7 +52,7 @@
   </view>
 
   <!-- 复习时间选择 -->
-  <view class="review-section">
+  <view wx:if="{{questions.length>0}}" class="review-section">
     <text class="review-title">选择下次复习时间
       <!-- <text wx:if="{{state === 1}}" class="review-status">必选</text> -->
       <!-- <text wx:if="{{state === 2}}" class="review-status">可修改</text> -->
