--- a/miniprogram/miniprogram/pages/detailBasic/detailBasic.wxss
+++ b/miniprogram/miniprogram/pages/detailBasic/detailBasic.wxss
@@ -219,9 +219,11 @@
   }
   
   .ai-feedback-content {
+    padding: 10px 5px;
     color: #4E5969;
     font-size: 14px;
     line-height: 1.6;
+    text-align: justify;
   }
   
   .feedback-list {
