--- a/miniprogram/miniprogram/pages/detailBasic/detailBasic.wxss
+++ b/miniprogram/miniprogram/pages/detailBasic/detailBasic.wxss
@@ -302,13 +302,13 @@
     gap: 4px;
   }
   
-  .next-review-time::before {
+  /* .next-review-time::before {
     content: '';
     display: inline-block;
     width: 14px;
     height: 14px;
     background: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'%3E%3Cpath fill='%2386909C' d='M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8zm.5-13H11v6l5.25 3.15.75-1.23-4.5-2.67V7z'/%3E%3C/svg%3E") center/contain no-repeat;
-  }
+  } */
   
   .confirm-btn {
     width: 50%;
