--- a/miniprogram/miniprogram/pages/detailBasic/detailBasic.wxss
+++ b/miniprogram/miniprogram/pages/detailBasic/detailBasic.wxss
@@ -83,11 +83,14 @@
     border-radius: 16px;
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.05);
     position: relative;
-    min-height: 200px;
-    cursor: pointer;
-    overflow: hidden;
+    min-height: 300px;
+    max-height: 320px;
+    overflow-y: auto;
+    /* word-break: break-all; */
+    /* cursor: pointer; */
+    /* overflow: hidden; */
   }
-  .state2 .question-card {
+  /* .state2 .question-card {
     width: 100%;
     padding: 24px;
     background: #fff;
@@ -97,7 +100,7 @@
     min-height: 200px;
     cursor: pointer;
     overflow: hidden;
-  }
+  } */
   
   .card-inner {
     position: relative;
@@ -116,6 +119,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    /* overflow-y: auto; */
     /* padding: 24px; */
   }
   
@@ -137,8 +141,8 @@
     backface-visibility: hidden;
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    justify-content: space-between;
+    /* align-items: center; */
     /* text-align: center; */
   }
   
